# sistema-turnos

./: .gitignore  README.md  build-tauri.bat  next.config.ts  nixpacks.toml  package-lock.json  package.json  railway.json
app/: globals.css  layout.tsx  page.tsx
app/api/anterior/: route.ts
app/api/config/: route.ts
app/api/estado/: route.ts
app/api/exportar/: route.ts
app/api/historial/: route.ts
app/api/limpiar/: route.ts
app/api/reordenar/: route.ts
app/api/siguiente/: route.ts
app/api/turnos/: route.ts
app/api/turnos/[id]/: route.ts
app/api/turnos/[id]/adherir/: route.ts
app/components/: SplashScreen.tsx  WindowControls.tsx
app/consultorio/: page.tsx
app/mostrador/: page.tsx
app/sala/: page.tsx
app/stream/: page.tsx
components/: Clock.tsx  PinModal.tsx  icons.tsx
electron/: main.js  preload.js  splash.html
lib/: queue.ts  store.ts
scripts/: after-pack.js  build-standalone.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
